examples/test/testpolicy162.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy162
  namespace: namespace279
spec:
  podSelector:
    matchLabels:
      key32: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value38
          key22: value28
      podSelector:
        matchLabels:
          key38: value2
          key21: value41
